@@ -1,3 +1,7 @@
+2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-client.ht: Add XFMail configuration information.
+
 2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Add keyword address information, and also
